Pages de restaurant avec les animations

--- a/restaurants/la-note-enchantee.html
+++ b/restaurants/la-note-enchantee.html
@@ -64,7 +64,7 @@
                             </div>
                             <div class="dish__selector">
                                 <div class="dish__check-circle">
-                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                    <i class="fa-solid fa-sm fa-check"></i>
                                 </div>
                             </div>
                         </div>
@@ -83,7 +83,7 @@
                             </div>
                             <div class="dish__selector">
                                 <div class="dish__check-circle">
-                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                    <i class="fa-solid fa-sm fa-check"></i>
                                 </div>
                             </div>
                         </div>
@@ -102,7 +102,7 @@
                             </div>
                             <div class="dish__selector">
                                 <div class="dish__check-circle">
-                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                    <i class="fa-solid fa-sm fa-check"></i>
                                 </div>
                             </div>
                         </div>
@@ -121,7 +121,7 @@
                             </div>
                             <div class="dish__selector">
                                 <div class="dish__check-circle">
-                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                    <i class="fa-solid fa-sm fa-check"></i>
                                 </div>
                             </div>
                         </div>
@@ -147,7 +147,7 @@
                             </div>
                             <div class="dish__selector">
                                 <div class="dish__check-circle">
-                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                    <i class="fa-solid fa-sm fa-check"></i>
                                 </div>
                             </div>
                         </div>
@@ -166,7 +166,7 @@
                             </div>
                             <div class="dish__selector">
                                 <div class="dish__check-circle">
-                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                    <i class="fa-solid fa-sm fa-check"></i>
                                 </div>
                             </div>
                         </div>
@@ -185,7 +185,7 @@
                             </div>
                             <div class="dish__selector">
                                 <div class="dish__check-circle">
-                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                    <i class="fa-solid fa-sm fa-check"></i>
                                 </div>
                             </div>
                         </div>
@@ -211,7 +211,7 @@
                             </div>
                             <div class="dish__selector">
                                 <div class="dish__check-circle">
-                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                    <i class="fa-solid fa-sm fa-check"></i>
                                 </div>
                             </div>
                         </div>
@@ -230,7 +230,7 @@
                             </div>
                             <div class="dish__selector">
                                 <div class="dish__check-circle">
-                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                    <i class="fa-solid fa-sm fa-check"></i>
                                 </div>
                             </div>
                         </div>
@@ -249,7 +249,7 @@
                             </div>
                             <div class="dish__selector">
                                 <div class="dish__check-circle">
-                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                    <i class="fa-solid fa-sm fa-check"></i>
                                 </div>
                             </div>
                         </div>
