--- a/restaurants/le-delice-des-sens.html
+++ b/restaurants/le-delice-des-sens.html
@@ -64,7 +64,7 @@
                             </div>
                             <div class="dish__selector">
                                 <div class="dish__check-circle">
-                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                    <i class="fa-solid fa-sm fa-check"></i>
                                 </div>
                             </div>
                         </div>
@@ -83,7 +83,7 @@
                             </div>
                             <div class="dish__selector">
                                 <div class="dish__check-circle">
-                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                    <i class="fa-solid fa-sm fa-check"></i>
                                 </div>
                             </div>
                         </div>
@@ -102,7 +102,7 @@
                             </div>
                             <div class="dish__selector">
                                 <div class="dish__check-circle">
-                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                    <i class="fa-solid fa-sm fa-check"></i>
                                 </div>
                             </div>
                         </div>
@@ -128,7 +128,7 @@
                             </div>
                             <div class="dish__selector">
                                 <div class="dish__check-circle">
-                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                    <i class="fa-solid fa-sm fa-check"></i>
                                 </div>
                             </div>
                         </div>
@@ -147,7 +147,7 @@
                             </div>
                             <div class="dish__selector">
                                 <div class="dish__check-circle">
-                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                    <i class="fa-solid fa-sm fa-check"></i>
                                 </div>
                             </div>
                         </div>
@@ -166,7 +166,7 @@
                             </div>
                             <div class="dish__selector">
                                 <div class="dish__check-circle">
-                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                    <i class="fa-solid fa-sm fa-check"></i>
                                 </div>
                             </div>
                         </div>
@@ -192,7 +192,7 @@
                             </div>
                             <div class="dish__selector">
                                 <div class="dish__check-circle">
-                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                    <i class="fa-solid fa-sm fa-check"></i>
                                 </div>
                             </div>
                         </div>
@@ -211,7 +211,7 @@
                             </div>
                             <div class="dish__selector">
                                 <div class="dish__check-circle">
-                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                    <i class="fa-solid fa-sm fa-check"></i>
                                 </div>
                             </div>
                         </div>
@@ -230,7 +230,7 @@
                             </div>
                             <div class="dish__selector">
                                 <div class="dish__check-circle">
-                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                    <i class="fa-solid fa-sm fa-check"></i>
                                 </div>
                             </div>
                         </div>
